force-app/main/default/objects/Account_Entitlements__c/Account_Entitlements__c.object-meta.xml
<CustomObject>
    <label>Account Entitlements</label>
    <nameField>
        <label>Entitlement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Entitlements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>