force-app/main/default/objects/Account_Entitlements__c/fields/Expired_Count__c.field-meta.xml
<CustomField>
    <fullName>Expired_Count__c</fullName>
    <label>Expired Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>