force-app/main/default/objects/Account_Entitlements__c/fields/Hold_Count__c.field-meta.xml
<CustomField>
    <fullName>Hold_Count__c</fullName>
    <label>Hold Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>