force-app/main/default/objects/Account_Entitlements__c/fields/Primary_Product_Desc__c.field-meta.xml
<CustomField>
    <fullName>Primary_Product_Desc__c</fullName>
    <label>Primary Product Desc</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>