force-app/main/default/objects/Account_Entitlements__c/fields/Unique_Key__c.field-meta.xml
<CustomField>
    <fullName>Unique_Key__c</fullName>
    <description>Unique Key = Master Customer Number + Product Id</description>
    <externalId>true</externalId>
    <label>Unique Key</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>